# plotter.studio

./: .gitignore  Cargo.toml  DESIGN_SPEC.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  taplo.toml  tsconfig.base.json  tsconfig.json
.claude/: README.md
.claude/skills/plotter-ui/: SKILL.md  TESTING.md
.claude/skills/plotter-ui/examples/: Counter.test.ts
.husky/: pre-commit
plotter/: Cargo.toml
plotter-api/: package.json  tsconfig.json
plotter-api/src/: geometry.ts  index.ts  wasm.ts
plotter-rs/: Cargo.toml
plotter-rs/examples/: svg2json.rs
plotter-rs/src/: digest.rs  geometry.rs  lib.rs  main.rs  simplify.rs  units.rs
plotter-wasm/: Cargo.toml  package.json
plotter-wasm/api/: geometry.ts  units.ts  wasm.ts
plotter-wasm/src/: lib.rs
ui/: .browserslistrc  package.json  rsbuild.config.ts  rspack.config.ts  rstest.config.ts  tsconfig.json
ui/src/: App.svelte  index.ts  layer.ts  theme.css
ui/src/components/: CanvasContainer.svelte  CollapsibleSection.svelte  ControlPanel.svelte  Layers.svelte  PlotPreview.svelte  PlotSettings.svelte  PlotStatus.svelte  PlotterConnection.svelte  PlotterFrame.svelte  PositionScale.svelte  PreviewContainer.svelte
ui/test/: Counter.svelte
