[package]
name    = "plotter"
edition = "2024"
publish = false

[dependencies]
kurbo          = "0.13.0"
serde          = { version = "1.0.228", features = ["derive"] }
tiny-skia-path = "0.11.4"
usvg           = "0.46.0"

[dev-dependencies]
clap       = { version = "4.5.54", features = ["derive"] }
serde_json = "1.0.149"
